    lists.
  * Update the trustdb.gpg with keyrings, to fix gpgv errors on
    missing file.
  * Document changes in packages key support and advise on reporting
    bugs via the BTS
  * Add support for addimportant in the general section only.
    (Closes: #610634)
  * Fix unpack option to look only for 'true' values.
  * Experimental support for debconf preseed files (Closes: #610614)

 -- Neil Williams <codehelp@debian.org>  Fri, 28 Jan 2011 12:57:19 +0000

multistrap (2.1.8) experimental; urgency=low

  [ Wookey ]
  * Add support for 'flat' apt-ftparchive-style URLs
  * Include chroot.sh preventing services being started during 
    chroot creation (Closes: #599056)

  [ Neil Williams ]
  * Improve the omitdebsrc handling for detection of 'true'.
  * Add more synopsis information to manual page. (Closes: #592621)
  * Aim 2.1.8 at experimental as squeeze is frozen and this version
    includes possibly disruptive changes.
  * Remove aptsources lists in bootstrap phase (Closes: #593561)
  * Improve check-deps to find missing packages
  * Drop all use of forceyes - no longer necessary.
  * Handle missing 'include' files cleanly and early. (Closes: #595006)
  * Expand the --simulate option output further.
  * Document the reinstall and additional fields. Add advice in manpage
    on what to check before filing bugs.
  * Add a note about redirecting output in manpage. (Closes: #593326)
  * Bump to debhelper 7 compat for dh_prep usage.

 -- Neil Williams <codehelp@debian.org>  Sat, 16 Oct 2010 15:36:06 +0100

multistrap (2.1.7) unstable; urgency=low

  * Add all packages to the source dir, including calculated
    dependencies.
  * [INTL:pt] Updated Portuguese translation for manpages
    (Closes: #595308)
  * [INTL:da] Danish translation of multistrap (Closes: #595391)
  * [INTL:pt] Updated Portuguese translation for program messages
    (Closes: #597144)
  * [INTL:fr] French manpage translation (Closes: #597385)