@@ -2,13 +2,13 @@ multistrap ./usr/sbin/
 doc/multistrap/man/* ./usr/share/man/
 examples/device_table.txt ./usr/share/doc/multistrap/examples/
 examples/multistrap-example.conf ./usr/share/doc/multistrap/examples/
+examples/setup.sh ./usr/share/doc/multistrap/examples/
+examples/config.sh ./usr/share/doc/multistrap/examples/
 examples/sid.conf ./usr/share/multistrap/
 examples/squeeze.conf ./usr/share/multistrap/
 examples/lenny.conf ./usr/share/multistrap/
-examples/setup.sh ./usr/share/doc/multistrap/examples/
-examples/config.sh ./usr/share/doc/multistrap/examples/
 examples/chroot.sh ./usr/share/multistrap/
-examples/chroot-policy.sh ./usr/share/multistrap/
+examples/chroot.conf ./usr/share/multistrap/
 check-deps.sh ./usr/share/multistrap/
 device-table.pl ./usr/share/multistrap/
 update-rc.d ./usr/share/multistrap/
