@@ -1,0 +1,30 @@
+# Example multistrap configuration file for native chroots.
+
+[General]
+arch=
+directory=
+# same as --tidy-up option if set to true
+cleanup=true
+# same as --no-auth option if set to true
+# keyring packages listed in each debootstrap will
+# still be installed.
+noauth=false
+# whether to add the /suite to be explicit about where apt
+# needs to look for packages. Default is false.
+explicitsuite=false
+# extract all downloaded archives (default is true)
+unpack=true
+# this setupscript is just for native chroots
+# to stop daemons from starting during configuration.
+setupscript=/usr/share/multistrap/chroot.sh
+# the order of sections is not important.
+# the debootstrap option determines which repository
+# is used to calculate the list of Priority: required packages.
+debootstrap=Debian
+aptsources=Debian
+
+[Debian]
+packages=apt
+source=http://ftp.uk.debian.org/debian
+keyring=debian-archive-keyring
+suite=squeeze
